objects/agf__ADM_Impact__c.object
<CustomObject>
    <fields>
        <fullName>agf__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Example__c</fullName>
        <label>Example</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Impact</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Order__c</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Example__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>